# python

poetry-demo/: pyproject.toml
poetry-demo/src/poetry_demo/rag01/: rag_01_p11_langchain.py
second-poetry-demo/src/poetry_demo/rag01/: rag_01_p11_langchain.py
third_poetry_demo/: pyproject.toml
third_poetry_demo/notebook/: first_rag_note.md
third_poetry_demo/src/poetry_demo/rag01/: rag_01_p11_langchain.py  rag_01_p9_llama_index.py
