[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Tom",email = "tom@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]

packages = [
   { include = "poetry_demo", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
"dev " = [
    "black (>=26.1.0,<27.0.0)"
]
