[project]
name = "third-poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]

requires-python = ">=3.11,<4.0"
dependencies = [
    "llama-index (>=0.14.13,<0.15.0)",
    "langchain (>=1.2.7,<2.0.0)",
    "langchain-deepseek (>=1.0.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
    "sentence-transformers (>=5.2.2,<6.0.0)"
]

[tool.poetry]
packages = [
   { include = "poetry_demo", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
